Fix picture alignment

--- a/style.css
+++ b/style.css
@@ -450,7 +450,7 @@ select {
 }
 
 .tab-list {
-  --gap: 0.7rem;
+  --gap: 2rem;
 }
 
 .dot-indicators > * {
@@ -560,6 +560,7 @@ body {
 .grid-container--destination > picture {
   grid-area: image;
   max-width: 60%;
+  align-self: start;
 }
 
 .grid-container--destination > .tab-list {
@@ -666,14 +667,17 @@ body {
   }
 
   .grid-container--crew {
+    grid-template-columns: minmax(1rem, 1fr) minmax(0, 37rem) minmax(0, 23rem) minmax(
+        1rem,
+        1fr
+      );
+    justify-items: start;
     grid-template-areas: '. title title .' '. content image .' '. tabs image .';
   }
 
-  .grid-container--crew > .dot-indicators {
-    justify-self: start;
-  }
-
   .grid-container--crew > picture {
+    grid-column: span 2;
     align-self: end;
+    max-width: 90%;
   }
 }
